[tool.poetry]
name = "hikerapi"
version = "0.1.0"
description = ""
authors = ["Hikerapi <admin@hikerapi.com>"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hikerapi"
authors = [{name = "Hikerapi", email = "admin@hikerapi.com"}]
dynamic = ["version", "description"]
